Locate and connect to master node

--- a/data/global_config.json
+++ b/data/global_config.json
@@ -1,1 +1,1 @@
-{"test":1}
+{"ssid_prefix":"iot_obn","ree_url":"https://api.esios.ree.es/archives/80/download?date=","proxy_url":"","mesh_password":"123","gateway_ssid":"xx","gateway_password":"xx","type":0}
