Save and raw config

--- a/data/global_config.conf
+++ b/data/global_config.conf
@@ -2,6 +2,6 @@ ssid_prefix=test;
 ree_url=prueba;
 proxy_url=prueba;
 mesh_password=prueba;
-gateway_ssid=prueba;
-gateway_password=prueba;
+gateway_ssid=Find5;
+gateway_password=12345678;
 type=2;
