Scan and detect all slaves (only counting)

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,8 +17,14 @@
 # Automatic targets - enable auto-uploading
 # targets = upload
 
-[env:nodemcu]
+#[env:nodemcu]
+#platform = espressif
+#framework = arduino
+#board = nodemcuv2
+#data_dir = data
+
+[env:d1_mini]
 platform = espressif
 framework = arduino
-board = nodemcuv2
+board = d1_mini
 data_dir = data
