Fix update schedules, some adjustements and removed sensible information

--- a/data/global_config.conf
+++ b/data/global_config.conf
@@ -1,9 +1,9 @@
-ssid_prefix=test;
-name=Lavadora;
-proxy_url=137.74.114.25;
+ssid_prefix=ESP;
+name=Christmass tree;
+proxy_url=;
 mesh_password=12345678;
-gateway_ssid=Find5;
+gateway_ssid=0xFA03D;
 gateway_password=12345678;
 network_interval=300000;
-network_id=123;
+network_id=;
 type=2;
